--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-numpy
-scipy
-kimimaro
-trimesh
-skeletor
-networkx
-multiprocess
-shapely
+kimimaro==3.3.0
+matplotlib==3.6.2
+multiprocess==0.70.14
+networkx==2.8.8
+numpy==1.23.4
+opencv-python==4.6.0.66
+pandas==1.5.1
+scikit-image==0.19.3
+scikit-learn==1.1.3
+scipy==1.9.3
+shapely==1.8.5.post1
+skeletor==1.2.3
+trimesh==3.16.2
